--- a/Project.ipynb
+++ b/Project.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "135cf328",
+   "id": "40c6a761",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4c3803e0",
+   "id": "518e7d46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "be8407fd",
+   "id": "def23363",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a4dae5e9",
+   "id": "ce75f611",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a2dc8790",
+   "id": "e078bc6e",
    "metadata": {},
    "outputs": [
     {
@@ -99,6 +99,17 @@
     "# Debugging information\n",
     "print('Train Dataset')\n",
     "print({ category: len(set(images)) for category, images in train_images_balanced.items() })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c713e9f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = train_images_balanced\n",
+    "test_dataset = { category: [ image for collection in collections for image in collection ] for category, collections in test_images.items() }"
    ]
   }
  ],
