take hardcoded category list

--- a/Project-Varieties-Oversampling.ipynb
+++ b/Project-Varieties-Oversampling.ipynb
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 22,
    "id": "ca37de6e",
    "metadata": {},
    "outputs": [],
@@ -800,7 +800,7 @@
     }
    ],
    "source": [
-    "model, fit = get_train_function(n_classes=6)\n",
+    "model, fit = get_train_function(n_classes=len(categories))\n",
     "model.summary()"
    ]
   },
@@ -1263,7 +1263,7 @@
     }
    ],
    "source": [
-    "params = {'n_classes': 6, 'conv_layers': [2,4], 'filters_start': [16,32], 'kernel_size': [2,3], 'optimizer': ['adam', 'rmsprop'], 'epochs': [10,20,30]}\n",
+    "params = {'n_classes': len(categories), 'conv_layers': [2,4], 'filters_start': [16,32], 'kernel_size': [2,3], 'optimizer': ['adam', 'rmsprop'], 'epochs': [10,20,30]}\n",
     "\n",
     "results = train_hyper_tuning(train_data, transfomed_label_train, test_data, transfomed_label_test, params)"
    ]
