--- a/Project-No-Varieties-Oversampling.ipynb
+++ b/Project-No-Varieties-Oversampling.ipynb
@@ -761,7 +761,7 @@
     }
    ],
    "source": [
-    "model, fit = get_train_function(n_classes=6)\n",
+    "model, fit = get_train_function(n_classes=len(categories))\n",
     "model.summary()"
    ]
   },
