--- a/Project-Varieties-Undersampling.ipynb
+++ b/Project-Varieties-Undersampling.ipynb
@@ -780,7 +780,7 @@
     }
    ],
    "source": [
-    "model, fit = get_train_function(n_classes=6)\n",
+    "model, fit = get_train_function(n_classes=len(categories))\n",
     "model.summary()"
    ]
   },
@@ -1226,7 +1226,7 @@
     }
    ],
    "source": [
-    "params = {'n_classes': 6, 'conv_layers': [2,4], 'filters_start': [16,32], 'kernel_size': [2,3], 'optimizer': ['adam', 'rmsprop'], 'epochs': [10,20,30]}\n",
+    "params = {'n_classes': len(categories), 'conv_layers': [2,4], 'filters_start': [16,32], 'kernel_size': [2,3], 'optimizer': ['adam', 'rmsprop'], 'epochs': [10,20,30]}\n",
     "\n",
     "results = train_hyper_tuning(train_data, transfomed_label_train, test_data, transfomed_label_test, params)"
    ]
